--- a/styles.css
+++ b/styles.css
@@ -133,54 +133,84 @@ p {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  
+  gap: 20px;
 }
 
 .booking-message img {
   width: 100px;
-  margin-bottom: 5px;
-  margin-top: 800px;
-  gap: 50px;
+  margin: 0;
+  margin-bottom: 10px;
 
 }
+
+
 
 .booking-message p {
   font-size: 1.2em;
   display: flex;
   justify-content: center;
-  margin-bottom: 500px;
+  
   
 }
-
-.train-list {
-  margin-top: 20px;
-  display: none;
+.test.booking-message {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
+  background-color: white;
+  padding: 50px;
+  border-radius: 10px;
+  width: 400px;   /* Fixed width */
+  height: 500px;  /* Fixed height */
+  overflow: auto; /* Make content scrollable when it overflows */
 }
 
 .train-item {
-  background-color: #fff;
-  padding: 10px;
+  background-color: white;
   border: 1px solid #ddd;
   border-radius: 5px;
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  padding: 10px;
+  display: flex; 
+  justify-content: space-between; /* Aligne les éléments sur la même ligne */
+  align-items: center; /* Centrer verticalement */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.book-button {
-  padding: 5px 10px;
+.train-item p {
   background-color: white;
-  color: blue;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 20px;
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+
+.book-button {
+  padding: 10px 15px;
+  background-color: #4CAF50;
+  color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-size: 1em;
 }
 
 .book-button:hover {
-  background-color: blue;
+  background-color: #45a049;
 }
 
+.train-time-price {
+  display: flex;
+  gap: 20px; /* Espacement entre l'heure et le prix */
+  font-size: 1em;
+  color: #333;
+}
 
 /* HTML Cart */
 
